# saleor-app-sdk

./: .codecov.yml  .env.example  .gitignore  DEVELOPMENT_GUIDELINES.md  Dockerfile  LICENSE  Makefile  README.docker.md  README.md  docker-compose.yml  main.py  pyproject.toml  roadmap.md  setup.cfg
.github/workflows/: test.yml
.junie/: guidelines.md
scaffold/: .env.example.jinja  .gitignore.jinja  LICENSE.jinja  Makefile.jinja  README.md  README.md.jinja  copier.yml  pyproject.toml.jinja  {% if include_docker %}Dockerfile{% endif %}.jinja  {% if include_docker %}docker-compose.yml{% endif %}.jinja
scaffold/src/{{ package_name }}/: __init__.py.jinja  main.py.jinja
scaffold/{% if include_tests %}tests{% endif %}/: __init__.py.jinja  test_main.py.jinja
src/saleor_app_sdk/: __init__.py  cli.py  permissions.py
src/saleor_app_sdk/app/: __init__.py  builder.py  config.py  core.py
src/saleor_app_sdk/graphql/: __init__.py  client.py  queries.py
src/saleor_app_sdk/models/: __init__.py  app_manifest.py  installation.py  webhooks.py
src/saleor_app_sdk/webhooks/: __init__.py  events.py  handler.py
templates/: base.html  config.html  index.html  products.html
templates/partials/: config_updated.html  product_created.html  product_details.html  product_search_results.html
tests/: ai.roadmap  conftest.py  test_cli.py  test_permissions.py  test_scaffold.py
tests/app/: test_builder.py  test_config.py  test_core.py
tests/graphql/: test_client.py  test_queries.py
tests/models/: test_app_manifest.py  test_installation.py  test_webhooks.py
tests/playwright/: README.md
tests/unit/: conftest.py  test_permissions.py
tests/unit/app/: test_core.py
tests/unit/graphql/: test_queries.py
tests/unit/models/: test_app_manifest.py
tests/unit/webhooks/: test_handler.py
tests/webhooks/: test_events.py  test_handler.py
