[metadata]
name = saleor-app-sdk
version = attr: saleor_app_sdk.__version__
description = Python SDK for building Saleor apps with FastAPI and HTMX
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11